--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.font-pathway {
+  font-family: "Pathway Gothic One", sans-serif;
+}
