--- a/frontend/src/styles/admincss/admin-body.css
+++ b/frontend/src/styles/admincss/admin-body.css
@@ -6,9 +6,13 @@
   height: calc(100vh - 22.5vh);
   overflow: auto;
   padding: 20px;
-  background: #f1f5f5;
-  border-left: 1px solid #000;
-  border-bottom: 1px solid #000;
+  background: #f8f8f8;
+  box-shadow: 0px 0px 3px #000;
+}
+
+.admin-schedule-table {
+  border-collapse: collapse;
+  width: 100%;
 }
 
 @media (max-width: 992px) {
@@ -35,14 +39,14 @@
 
   .admin-sidebar a:hover {
     text-decoration: none;
-    color: #8f8f8f;
+    color: #797979;
     font-size: 14px;
     padding-left: 10px;
   }
 
   .admin-sidebar .active {
     text-decoration: none;
-    color: #8f8f8f;
+    color: #797979;
     font-size: 14px;
     padding-left: 10px;
   }
@@ -65,14 +69,14 @@
 
   .admin-sidebar a:hover {
     text-decoration: none;
-    color: #8f8f8f;
+    color: #797979;
     font-size: 9px;
     padding-left: 2px;
   }
 
   .admin-sidebar .active {
     text-decoration: none;
-    color: #8f8f8f;
+    color: #797979;
     font-size: 9px;
     padding-left: 2px;
   }
