--- a/frontend/src/styles/admincss/admincar.css
+++ b/frontend/src/styles/admincss/admincar.css
@@ -1,4 +1,4 @@
-.page-content-booking {
+.page-content-car {
   margin-top: 80px;
   margin-left: 16vw;
   margin-right: 1vw;
@@ -7,21 +7,14 @@
   padding: 5px;
   background: #f8f8f8;
   box-shadow: 0px 0px 3px #000;
-  position: relative;
 }
 
-.req-div {
-  display: flex;
-  gap: 10px;
+.page-content-maintenance {
   margin-left: 16vw;
   margin-right: 1vw;
-}
-
-.page-content-req {
-  flex: 1;
   width: auto;
   height: calc(100vh - 60vh);
-  padding: 10px;
+  padding: 5px;
   background: #f8f8f8;
   box-shadow: 0px 0px 3px #000;
 }
