--- a/frontend/src/styles/admincss/admincar.css
+++ b/frontend/src/styles/admincss/admincar.css
@@ -1,9 +1,17 @@
-.page-content-car {
+.page-main-content-car {
+  position: fixed;
   margin-top: 80px;
-  margin-left: 16vw;
+  margin-left: 15.7vw;
   margin-right: 1vw;
-  width: auto;
-  height: calc(100vh - 50vh);
+  width: calc(100vw - 17vw);
+  height: calc(100vh - 22vh);
+  padding: 0;
+}
+
+.page-content-car {
+  position: relative;
+  width: calc(100vw - 17vw);
+  height: calc(100vh - 22vh);
   padding: 5px;
   background: #f8f8f8;
   box-shadow: 0px 0px 3px #000;
@@ -11,10 +19,13 @@
 }
 
 .page-content-maintenance {
+  position: relative;
+  margin-top: 10px;
   margin-left: 16vw;
   margin-right: 1vw;
   width: auto;
-  height: calc(100vh - 60vh);
+  height: calc(100vh - 55vh);
+  overflow-y: auto;
   padding: 5px;
   background: #f8f8f8;
   box-shadow: 0px 0px 3px #000;
@@ -136,4 +147,36 @@ select {
 .cancel-btn:hover {
   color: white;
   background-color: #e91b1b;
+}
+
+.cars-container {
+  display: flex;
+  gap: 1px;
+  margin-right: 1vw;
+}
+
+.cars-container button {
+  font-family: "Pathway Gothic One", sans-serif;
+  font-size: 24px;
+  padding: 5px 20px;
+  border: none;
+  background-color: #d9d9d9;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  overflow: hidden;
+}
+
+.cars-container button:hover {
+  background-color: #c9c9c9;
+}
+
+.cars-container button.active {
+  background-color: #4a4a4a;
+  color: white;
+  font-weight: bold;
+}
+
+.cars-container button.active:hover {
+  background-color: #3a3a3a;
 }
