--- a/frontend/src/styles/admincss/admin-body.css
+++ b/frontend/src/styles/admincss/admin-body.css
@@ -1,11 +1,12 @@
 .page-content {
   position: fixed;
-  top: 80px;
-  left: 16vw;
-  width: calc(100vw - 20vw);
-  height: calc(100vh - 21vh);
+  margin-top: 80px;
+  margin-left: 15.6vw;
+  margin-right: 1vw;
+  width: calc(100vw - 17vw);
+  height: calc(100vh - 16vh);
   overflow: auto;
-  padding: 20px;
+  padding: 5px;
   background: #f8f8f8;
   box-shadow: 0px 0px 3px #000;
 }
