--- a/frontend/src/styles/admincss/admincar.css
+++ b/frontend/src/styles/admincss/admincar.css
@@ -175,8 +175,5 @@ select {
   background-color: #4a4a4a;
   color: white;
   font-weight: bold;
-}
-
-.cars-container button.active:hover {
-  background-color: #3a3a3a;
+  cursor: default;
 }
