--- a/frontend/src/styles/admincss/adminmanageuser.css
+++ b/frontend/src/styles/admincss/adminmanageuser.css
@@ -1,3 +1,16 @@
+.page-content-customers {
+  position: fixed;
+  margin-top: 115px;
+  margin-left: 15.7vw;
+  margin-right: 1vw;
+  width: calc(100vw - 17vw);
+  height: calc(100vh - 22vh);
+  padding: 5px;
+  background: #f8f8f8;
+  box-shadow: 0px 0px 3px #000;
+  overflow-y: auto;
+}
+
 .users-container {
   position: absolute;
   display: inline-flex;
@@ -26,21 +39,5 @@
   background-color: #4a4a4a;
   color: white;
   font-weight: bold;
-}
-
-.users-container button.active:hover {
-  background-color: #3a3a3a;
-}
-
-.page-content-customers {
-  position: fixed;
-  margin-top: 115px;
-  margin-left: 15.7vw;
-  margin-right: 1vw;
-  width: calc(100vw - 17vw);
-  height: calc(100vh - 22vh);
-  padding: 5px;
-  background: #f8f8f8;
-  box-shadow: 0px 0px 3px #000;
-  overflow-y: auto;
+  cursor: default;
 }
