--- a/frontend/src/styles/admincss/adminsidebar.css
+++ b/frontend/src/styles/admincss/adminsidebar.css
@@ -12,6 +12,7 @@
 
 .admin-sidebar a {
   text-decoration: none;
+  transition: all 0.3s ease;
   color: #000;
   font-size: 24px;
   padding-left: 10px;
