--- a/frontend/src/styles/admincss/admincar.css
+++ b/frontend/src/styles/admincss/admincar.css
@@ -71,52 +71,7 @@
   color: #797979;
 }
 
-/* Modal */
-.modal-overlay {
-  position: fixed;
-  inset: 0;
-  background: rgba(0, 0, 0, 0.4);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-}
-.modal {
-  background: #fff;
-  padding: 15px;
-  border-radius: 8px;
-  width: min(90%, 400px);
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-}
-.modal input {
-  font-size: 18px;
-  width: 200px;
-  margin: 6px 0;
-  padding: 3px;
-}
-
-.field-row {
-  display: flex;
-  align-items: center;
-}
-.field-label {
-  width: 150px;
-  font-size: 18px;
-  margin-right: 10px;
-}
-
-input[type='file'] {
-  font-size: 16px;
-  width: 200px;
-}
-
-select {
-  font-size: 18px;
-  width: 216px;
-  margin: 6px 0;
-  padding: 3px;
-}
-
+/* Tabs CSS */
 .btn-container {
   margin-top: 10px;
   display: flex;
