--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -10,6 +10,13 @@ table tbody tr {
   border-bottom: 1px solid #000;
 }
 
+#globeButton {
+  border: none;
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+}
+
 #globeButton:hover {
   color: #888888;
 }
@@ -182,4 +189,83 @@ table tbody tr {
 .cancel-btn:hover {
   color: white;
   background-color: #e91b1b;
+}
+
+/* Modal */
+.modal-overlay {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+.modal {
+  background: #fff;
+  padding: 15px;
+  border-radius: 8px;
+  width: min(90%, 400px);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+}
+.modal input {
+  font-size: 18px;
+  width: 200px;
+  margin: 6px 0;
+  padding: 3px;
+}
+
+.field-row {
+  display: flex;
+  align-items: center;
+}
+.field-label {
+  width: 150px;
+  font-size: 18px;
+}
+
+select {
+  font-size: 18px;
+  width: 216px;
+  margin: 6px 0;
+  padding: 3px;
+}
+
+input[type='file'] {
+  font-size: 18px;
+  width: 180px;
+  margin: 0 0;
+}
+
+input[type="file"]::file-selector-button {
+  background: #4CAF50;
+  color: white;
+  border: none;
+  font-size: 14px;
+  padding: 5px 10px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+input[type="checkbox"] {
+  margin-left: -125px;
+}
+
+input[type="radio"] {
+  margin-left: -125px;
+  margin-right: -80px;
+}
+
+.car-img-btn {
+  width: 90px !important;
+  margin-left: -36px !important;
+  margin-right: 50px !important;
+}
+
+.select-payment-release {
+  width: 100px;
+  margin-left: -21px !important;
+  font-size: 16px;
+  background-color: #d9d9d9;
+  cursor: pointer;
 }
