--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -271,3 +271,47 @@ input[type='radio'] {
   background-color: #d9d9d9;
   cursor: pointer;
 }
+
+.gas-level-select {
+  width: 100px;
+  margin-left: -40px !important;
+  font-size: 16px;
+  background-color: #d9d9d9;
+  cursor: pointer;
+}
+
+.odometer {
+  margin-left: -31px !important;
+}
+
+/* Remove the buttons in the input_type = number */
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
+/* Hide the default file input */
+.hidden {
+  display: none;
+}
+
+/* Style the custom button */
+.file-upload-button {
+  display: inline-flex;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  background-color: #4caf50;
+  color: white;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.file-upload-button:hover {
+  background-color: #45a049;
+}
