--- a/frontend/src/styles/admincss/admindashboard.css
+++ b/frontend/src/styles/admincss/admindashboard.css
@@ -1,8 +1,8 @@
 .page-container.dashboard-container {
   margin-top: 55px;
-  margin-left: 15.2vw;
-  height: calc(100vh - 15.5vh);
-  width: calc(100vw - 17vw);
+  margin-left: 19vw;
+  height: auto;
+  width: auto;
   overflow-y: auto;
   padding: 10px;
 }
@@ -131,7 +131,6 @@
     flex-direction: column;
     gap: var(--space-sm);
   }
-
 
   .dashboard-card-image {
     max-width: 150px;
