Add payment and refund modals to admin transactions
Introduced AddPaymentModal and AddRefundModal components and integrated them into the AdminTransactionPage for adding payments and refunds. Updated styles for select elements in modals. Minor code formatting and error handling improvements in AdminSchedulePage.

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -371,6 +371,14 @@ input[type='radio'] {
   margin-left: -31px !important;
 }
 
+/* SELECT OPT --- Add Payment/Refund Modal */
+.select-add-payment-refund {
+  width: 210px;
+  font-size: 16px;
+  background-color: #d9d9d9;
+  cursor: pointer;
+}
+
 /* Remove the buttons in the input_type = number */
 input[type='number']::-webkit-outer-spin-button,
 input[type='number']::-webkit-inner-spin-button {
